force-app/main/default/objects/Airtable_Webhook_Configuration__c/Airtable_Webhook_Configuration__c.object-meta.xml
<CustomObject>
    <label>Airtable Webhook Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airtable Webhook Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>