force-app/main/default/objects/Airtable_Webhook_Configuration__c/fields/Cursor__c.field-meta.xml
<CustomField>
    <fullName>Cursor__c</fullName>
    <label>Cursor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>