force-app/main/default/objects/Airtable_Webhook_Configuration__c/fields/expirationTime__c.field-meta.xml
<CustomField>
    <fullName>expirationTime__c</fullName>
    <label>expirationTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>