force-app/main/default/objects/Airtable_Webhook_Configuration__c/fields/webhookId__c.field-meta.xml
<CustomField>
    <fullName>webhookId__c</fullName>
    <label>webhookId</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>